# The-next-generation-compiler-generator-

./: CMakeLists.txt  Code_for_mapping_non_terminal_symbols_to_regex_expressions.cpp  Current language capabilities  Current language capabilities(important to read)  LICENSE  README.md  Test_code.cpp  \Modules\Main_Modules\Input_modules\Inputer.ixx  advantages over current tools  all_my_code.cpp  run.cpp
Base_modules/: all_declarations.ixx  all_non_term_entries_implementation.cpp  readme
Base_modules/src/: all_non_term_entries_implementation.cpp  common_function_implementation.cpp
Config_reader_module/: Config_parser.ixx  readme
Driver_module/: Driver_module.ixx
Input_modules/: Inputer.ixx  readme
Modules/: all_declarations.ixx  base_class_for_all_parts_of_compiler_gen.ixx
Output_modules/: Printer.ixx  readme
Output_modules/src/: Non_nested_options.cpp  branch_and_loop.cpp  helper_option_templates_for_arithmetic_related_options.cpp  helper_option_templates_for_managing_list_of_non_term_entries_implementation.cpp
complete_build/: README.txt
dependencies/: readme
regex_wrapper/: regex_wrapper.ixx
src/: all_non_term_entries_implementation.cpp  common_function_implementation.cpp
